font awesome free has been configured, tested and run properly

--- a/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/test/test.component.html
+++ b/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/test/test.component.html
@@ -26,3 +26,6 @@
 <p>Long text with summary pipe with limit argument : <br /> {{longtext | summary:100}} </p>
 <hr />
 
+
+<p>below is font test component </p>
+<app-fonttest></app-fonttest>
