--- a/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/test/test.component.html
+++ b/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/test/test.component.html
@@ -28,4 +28,5 @@
 
 
 <p>below is font test component </p>
-<app-fonttest></app-fonttest>
+<!-- [isFill] property is an input varibale and can be set from outside of component when used as a directive -->
+<app-fonttest [isFill] ="isFill"></app-fonttest>
