sending data from one component to another

--- a/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/shared/components/fonttest/fonttest.component.html
+++ b/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/shared/components/fonttest/fonttest.component.html
@@ -18,6 +18,12 @@
     <i class="far fa-star fa-3x"></i>
   </div>
 </div>
+<hr>
+
+<p>example of how to pas data from one component to another and must use alias for @input() variables as good programming practice</p>
+<div *ngIf="isShowable">
+  some text to show or not based condition
+</div>
 
 
 
