--- a/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/test/test.component.html
+++ b/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/test/test.component.html
@@ -30,4 +30,5 @@
 <p>below is font test component </p>
 <!-- [isFill] property is an input varibale and can be set from outside of component when used as a directive -->
 <!-- [is-Showable] is alias name of fonttest component -->
-<app-fonttest [isFill] ="isFill" [is-Showable]="isShowable"></app-fonttest>
+<!-- event-Happend is custom event just like click etc so we write it inside () -->
+<app-fonttest [isFill] ="isFill" [is-Showable]="isShowable" (event-Happend)="onEventHappend()"></app-fonttest>
