passing some value to csutom event and passing whole object thorugh custom event using @output

--- a/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/shared/components/fonttest/fonttest.component.html
+++ b/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/shared/components/fonttest/fonttest.component.html
@@ -31,7 +31,16 @@
   <p>some text which will trigger event on click</p>
 </div>
 
+<p>Below demonstrate @output keyword which passes some data too as arguments</p>
+<div (click)="onClickOut2()">
+  <p>some text which will trigger event on click</p>
+</div>
 
+
+<p>Below demonstrate @output keyword which passes some object too as arguments</p>
+<div (click)="onClickOut3()">
+  <p>some text which will trigger event on click</p>
+</div>
 
 
 
