directives covered ngFf , ngFor, ngSwitch, ngFor change detection, ngFor trackby,  ngClass, ngStyle, csutom directive

--- a/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/test/test.component.html
+++ b/NetCore5WithAngular12/NetCore5WithAngular12/ClientApp/src/app/test/test.component.html
@@ -48,6 +48,10 @@
     dynamic button text 1
   </ng-container>
   <ng-container id="anyIdName3">
-   dynamic button text 2
+    dynamic button text 2
   </ng-container>
 </bootstrap-panel>
+
+<hr>
+<hr>
+<app-directives></app-directives>
